style: fix spacing for mobile & tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,8 @@ body {
     box-sizing: border-box;
     width: 85%;
     height: 65vh;
-    max-height: 450px;
-    max-width: 830px;
+    max-height: 550px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
@@ -125,7 +125,7 @@ body {
     width: 100px;
     height: 100px;
     font-size: 3.2rem;
-    margin: 0 30px;
+    margin: 0 14px 40px;
     transition: all 0.5s;
 }
 
@@ -263,6 +263,11 @@ body {
     .btn--big {
         margin: 10px 10px;
     }
+
+    .btn--gray {
+        margin-top: 20px;
+    }
+    
     .question-area {
         padding: 10px 0;
     }
